# controllers/swagger/user.go
@@ -1,0 +1,7 @@
+package controllers_swagger
+
+type GetCurrentUserBadResponse struct {
+	Succeed bool   `json:"succeed" example:"false"`
+	Message string `json:"message" example:"string"`
+	User    string `json:"user" example:"null"`
+}
